sticky spacing fixes for wide and short screens

--- a/src/components/AddressBook/AddressBook.scss
+++ b/src/components/AddressBook/AddressBook.scss
@@ -1,9 +1,5 @@
-$light-lines: rgb(196, 196, 196);
-$light-text: rgb(48, 48, 48);
-$phones: 500px;
-$breakpoint-tablet: 767px;
-$breakpoint-medium: 992px;
-$breakpoint-large: 1200px;
+@import '../../styles.scss';
+
 
 #address-book-container {
     display: flex;
@@ -100,13 +96,13 @@ $breakpoint-large: 1200px;
     background-color: rgb(182, 201, 218);
     border-radius: 40px;
 
-    @media screen and (max-width: $phones ){
+    @media screen and (max-width: $breakpoint-smallphones ){
         height: 30px;
         margin-top: 0;
         width: 90%;
     }
 
-    @media screen and (min-width: $phones) and (max-width: $breakpoint-tablet) {
+    @media screen and (min-width: $breakpoint-smallphones) and (max-width: $breakpoint-tablet) {
         height: 40px;
         margin-top: 0;
         width: 90%;
