--- a/src/components/ContactDetails/ContactDetails.scss
+++ b/src/components/ContactDetails/ContactDetails.scss
@@ -1,11 +1,4 @@
-$nav-and-select: rgb(182, 201, 218);
-$light-lines: rgb(196, 196, 196);
-$light-text: rgb(48, 48, 48);
-$breakpoint-smallphones: 420px;
-$breakpoint-tablet: 767px;
-$breakpoint-medium: 992px;
-$breakpoint-large: 1200px;
-
+@import '../../styles.scss';
 
 .contact-details-outer {
     display: flex;
