--- a/src/components/FavoritesList/FavoritesList.scss
+++ b/src/components/FavoritesList/FavoritesList.scss
@@ -1,7 +1,4 @@
-$breakpoint-smallphones: 420px;
-$breakpoint-tablet: 767px;
-$breakpoint-medium: 992px;
-$breakpoint-large: 1200px;
+@import '../../styles.scss';
 
 .favorite {
     color: rgb(230, 138, 0);
@@ -56,16 +53,37 @@ $breakpoint-large: 1200px;
     @media screen and (min-width: $breakpoint-smallphones ) and (max-width: $breakpoint-tablet ){
         width: 100%;
         margin: 0;
+        overflow-y: hidden;
+
+        @media screen and (max-height: 700px) {
+            height: 18vh;
+        }
+
+        @media screen and (min-height: 700px) {
+            height: 16vh;
+        }
     }
 
     @media screen and (min-width: $breakpoint-tablet) and (max-width: $breakpoint-medium) {
         width: 50%;
         margin: 0px 0px 15px 0px;
+        overflow-y: hidden;
+        min-height: 125px;
+
+
+        @media screen and (max-height: 700px) {
+            height: 18vh;
+        }
+
+        @media screen and (min-height: 700px) {
+            height: 16vh;
+        }
     }
 
     @media screen and (min-width: $breakpoint-medium) {
         width: 50%;
         margin: 0px 0px 15px 0px;
+        min-height: 150px;
     }
 }
 
