--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 $nav-and-select: rgb(182, 201, 218);
 $light-lines: rgb(196, 196, 196);
-$light-text: rgb(73, 73, 73);
+$light-text: rgb(48, 48, 48);
 $breakpoint-smallphones: 420px;
 $breakpoint-tablet: 767px;
 $breakpoint-medium: 992px;
